# charts

./: .gitignore  AGENTS.md  ARCHITECTURE.md  BINARY-LICENCE.md  BINARY-LICENSE.md  BUILD_SUMMARY_2.0.0_MIT.md  CHANGELOG.md  CORE_RELEASE_STRATEGY.md  LICENSE  LICENSE-FAQ.md  LICENSING.md  MIT-LICENSE-IMPLEMENTATION.md  NOTICE  PRICING.md  PUBLIC_API.md  QUALITY_REPORT.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  RELEASE_NOTES_2.0.0_MIT.md  RENDERER_CATALOG.md  RENDERER_GUIDELINES.md  ROADMAP.md  SLA.md  TECH.md  USER_GUIDE.md  pom.xml
arbercharts-compose-bridge/: pom.xml
arbercharts-core/: pom.xml
arbercharts-demo/: MEDICAL_DEMO_SMOKE_CHECKLIST.md  pom.xml
arbercharts-qt-bridge/: CMakeLists.txt  pom.xml
arbercharts-qt-bridge/src/: ArberQuickItem.cpp  ArberQuickItem.h
arbercharts-server-bridge/: pom.xml
arbercharts-spring-boot-starter/: pom.xml
arbercharts-starter/: pom.xml
arbercharts-swift-bridge/: Package.swift  pom.xml
arbercharts-swing-bridge/: pom.xml
arbercharts-visual-verifier/: README.md  pom.xml  quick-test.sh
binaries/: README.md  SHA256SUMS.txt  run-demo.bat  run-demo.sh
docs/: AGENTS.md  ANFORDERUNGEN.md  API_NAMING_REVIEW_v1.7.md  AUDIT.md  AUDIT_CLOSURE_MATRIX_v1.7.md  AUDIT_RESPONSE_v1.7.md  BRIDGE_VERIFICATION.md  CHANGELOG.md  CI_SETUP.md  COMPLIANCE.md  CONCURRENCY_MODEL.md  DEMO_GRID_MAPPING.md  DOCTRINE_POLICY.md  EULA_DRAFT.md  EXECUTIVE_SUMMARY.md  GRAALVM_AUDIT.md  JAVADOC_UPDATE_REPORT.md  LICENSING.md  LOGGING_POLICY.md  MIGRATION_GUIDE.md  MIGRATION_GUIDE_v1.7.md  PACKAGING.md  PERFORMANCE_REPORT.md  PRICING.md  (+26 more)
(+3616 files in other folders)
